this project exposes one on html videoes, iframe and JS modal

--- a/project3/index.html
+++ b/project3/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./styles/header.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./css/all.css">
 </head>
 
 <body>
@@ -210,12 +211,12 @@
             <li class="resources-items"><a href="#">privacy</a></li>
         </ul>
         <ul class="social-icon">
-            <li class="resources-items"><a href="#">messsage</a></li> 
-            <li class="resources-items"><a href="#">twotter</a></li> 
-            <li class="resources-items"><a href="#">youtube</a></li> 
+            <li class="fa-brands fa-discourse resources-items"><a href="#"></a></li> 
+            <li class="fa-brands fa-twitter"><a href="#"></a></li> 
+            <li class=" fa-brands fa-youtube resources-items"><a href="#"></a></li> 
         </ul>
         <ul class="lobe">
-            <svg width="65px" height="30px" viewBox="0 0 196 52" version="1.1" xmlns="http://www.w3.org/2000/svg">
+            <svg  width="65px" height="30px" viewBox="0 0 196 52" version="1.1" xmlns="http://www.w3.org/2000/svg">
                 <defs>
                     <path d="M14.7318403,-3.55271368e-15 L23.7444592,
             -3.13837756e-15 C27.3105342,-3.7934549e-15 28.6036791,
